 * A Space Adventure, Searching in the Dust: Don't take away control right above the pit near Sandy
 * A Space Adventure: Fix clan membership of PAotH in main Death Planet mission
 * A Space Adventure, final mission: Don't say "Missed" or "Yes, Sir!" when inappropriate
 * The Great Escape: Infinite attack mode did not work
 * Shotgun/Sniper Rifle Target Practicse: Suppress “X remaining” message
 * Fix resurrection animation appearing at wrong position for some missions and styles

Content:
 + New Sudden Death water texture for CrazyMission theme
 + Add dust flakes for Cheese and CrazyMission themes
 * Fix repeating sun in Hoggywood theme

Server:
 + Add “/help” chat command for command help
 + Can now clear room greeting by using chat command “/greeting” without arguments
 + Many new error and status messages for improved usability
 * Fix many server messages being not translated

Lua API:
 * Deprecation: Setting TurnTimeLeft/ReadyTimeLeft directly is deprecated and will become useless in future. Use the setter functions below
 + New call: SetTurnTimeLeft(newTurnTimeLeft): Set remaining turn time
 + New call: SetReadyTimeLeft(newReadyTimeLeft): Set remaining ready time
 + New call: Retreat(time [, respectGetAwayTimeFactor): Force current turn into retreating mode
 + New call: GetAmmoTimer(gearUid, ammoType): Returns current set timer for given ammoType and hog gear in ms. Returns nil for non-timerable ammo
 + New call: EnableSwitchHog(): Enable hog switching
 + New call: GetAmmo(ammoType): Returns ammo configuration (corresponds to SetAmmo)
 + New call: GetVampiric(): Returns true if vampirism is currently active
 + New call: GetLaserSight(): Returns true if laser sight (as utility) is currenctly active (ignoring sniper rifle)
 + New call: IsHogHidden(gear): Returns true if hog is hidden
 + Changed call: AddTeam: 2nd param. color: Accepts negative value to use a default clan color from player settings